@@ -7,5 +7,6 @@ for image in ${images[@]}
 do
     # cat ${image}/Dockerfile | grep -E "^FROM" | awk '{print $2}' | xargs -I {} docker pull {}
     docker buildx build --push -t ysicing/${image} ${image}
-    curl -s https://cr.hk1.godu.dev/pull\?image="ysicing/${image}"
+    # curl -s https://cr.hk1.godu.dev/pull\?image="ysicing/${image}"
+    ergo ext sync ysicing/${image}
 done
